--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "web/basic-server.js",
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
-  "dependencies": {},
+  "dependencies": {
+    "connect": "^3.2.0",
+    "http-request": "^0.6.3",
+    "node-static": "^0.7.6"
+  },
   "devDependencies": {
     "chai": "^1.9.0",
     "cron": "^1.0.3",
