--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "connect": "^3.2.0",
     "http-request": "^0.6.3",
-    "node-static": "^0.7.6"
+    "node-static": "^0.7.6",
+    "request": "^2.44.0",
+    "require": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^1.9.0",
